toggle switch, enlarge font size for mobile

--- a/style_v2.css
+++ b/style_v2.css
@@ -1,4 +1,8 @@
 /* 全体のレイアウト設定 */
+html {
+    font-size: 125%; /* 基本サイズの125% */
+}
+
 body {
     font-family: "Arial", sans-serif; /* 日本語のフォントをゴシックに変更 */
     margin: 0;
